Clean up some of the testing patterns and handling of the default rule datasource constant